--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-"BodyHealth" 
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Редирект</title>
+    <meta http-equiv="refresh" content="0; URL=https://app.reconstructionclinic.ru">
+</head>
+<body>
+    <p>Перенаправление на другой сайт...</p>
+</body>
+</html>
