--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <head>
     <title>404 Not Found</title>
     <script>
-        window.location.href = "https://app.reconstructionclinic.ru";
+        window.location.href = "https://onelink.to/va4jyb";
     </script>
 </head>
 <body>
