--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Редирект</title>
-    <meta http-equiv="refresh" content="0; URL=https://app.reconstructionclinic.ru">
+    <meta http-equiv="refresh" content="0; URL=https://onelink.to/va4jyb">
 </head>
 <body>
     <p>Перенаправление на другой сайт...</p>
