--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Button Page</title>
+    <title>Deep Link Button</title>
     <style>
         body {
             display: flex;
@@ -18,15 +18,11 @@
             border-radius: 5px;
             font-size: 16px;
             cursor: pointer;
+            text-decoration: none;
         }
     </style>
-    <script>
-        function redirectToOtherPage() {
-            window.location.href = "https://onelink.to/va4jyb";
-        }
-    </script>
 </head>
 <body>
-    <button class="center-button" onclick="redirectToOtherPage()">Нажми меня</button>
+    <a href="https://appbodyhealth.github.io/cources" class="center-button">Открыть мобильное приложение</a>
 </body>
 </html>
