--- a/404.html
+++ b/404.html
@@ -24,5 +24,6 @@
 </head>
 <body>
     <a href="https://appbodyhealth.github.io/cources" class="center-button">Открыть мобильное приложение</a>
+    <a href="intent:#Intent;scheme=https://appbodyhealth.github.io;package=com.bodyhealth;end">click here</a>
 </body>
 </html>
