--- a/404.html
+++ b/404.html
@@ -1,29 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Deep Link Button</title>
-    <style>
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-        }
-        .center-button {
-            padding: 15px 30px;
-            background-color: #007bff;
-            color: #fff;
-            border: none;
-            border-radius: 5px;
-            font-size: 16px;
-            cursor: pointer;
-            text-decoration: none;
-        }
-    </style>
+<head> 
+    <title>404 Not Found</title>
+    <script>
+        window.location.href = "intent:#Intent;scheme=https://appbodyhealth.github.io;package=com.bodyhealth;end";
+    </script>
 </head>
 <body>
-    <a href="https://appbodyhealth.github.io/cources" class="center-button">Открыть мобильное приложение</a>
-    <a href="intent:#Intent;scheme=https://appbodyhealth.github.io;package=com.bodyhealth;end">click here</a>
+    <p>Перенаправление на другой сайт...</p>
 </body>
 </html>
