--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
 <head> 
     <title>404 Not Found</title>
     <script>
-        window.location.href = "intent:#Intent;scheme=https://appbodyhealth.github.io;package=com.bodyhealth;end";
+        window.location.href = "https://onelink.to/va4jyb";
     </script>
 </head>
 <body>
